remote message trying

--- a/web/index.html
+++ b/web/index.html
@@ -18,8 +18,19 @@
     <button id="hangupButton">Hang Up</button>
   </div>
 
+  <textarea id="dataChannelSend" disabled
+    placeholder="Press Start, enter some text, then press Send."></textarea>
+  <textarea id="dataChannelReceive" disabled></textarea>
+
+  <div id="buttons">
+    <button id="startButton1">Start</button>
+    <button id="sendButton1">Send</button>
+    <button id="closeButton1">Stop</button>
+  </div>
+
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/main1.js"></script>
   <script src="js/socket.io.js"></script>
 </body>
 </html>
